[package]
name = "collateral-vault-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-sdk = "1.16.0"
solana-client = "1.16.0"
solana-program = "1.16.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["full"] }
hyper = "1.0"

# Configuration
dotenv = "0.15"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Crypto
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
mockall = "0.12"
proptest = "1.0"
criterion = "0.5"

# For integration tests
reqwest = { version = "0.11", features = ["json"] }
testcontainers = "0.15"

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "security_tests"
path = "tests/security_tests.rs"