[package]
name = "collateral-vault"
version = "0.1.0"
description = "Collateral Vault Management System for Perpetual Futures Exchange"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "collateral_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.16.0"
spl-token = "4.0.0"
thiserror = "1.0"

[dev-dependencies]
anchor-client = "0.29.0"
solana-sdk = "1.16.0"
solana-program-test = "1.16.0"